Tests JDK8: replace List.of/Map.of, nullInputStream/nullReader, Files.writeString, String.repeat, Duration.truncatedTo, readAllBytes; adjust assertions; format